CloudFormation/EFS.json
{
   "Resources":{
      "theFileSystem":{
         "Type":"AWS::EFS::FileSystem",
         "Properties":{
            "Encrypted":false,
            "PerformanceMode":"maxIO",
            "Encrypted": true
         }
      },
      "MountPointA":{
         "Type":"AWS::EFS::MountTarget",
         "Properties":{
            "FileSystemId":{
               "Ref":"theFileSystem"
            },
            "SecurityGroups":[
               {
                  "Ref":"EfsSecurityGroup"
               }
            ],
            "SubnetId":{
               "Fn::ImportValue":"PublicSubA"
            }
         }
      },
      "MountPointB":{
         "Type":"AWS::EFS::MountTarget",
         "Properties":{
            "FileSystemId":{
               "Ref":"theFileSystem"
            },
            "SecurityGroups":[
               {
                  "Ref":"EfsSecurityGroup"
               }
            ],
            "SubnetId":{
               "Fn::ImportValue":"PublicSubB"
            }
         }
      },
      "MountPointC":{
         "Type":"AWS::EFS::MountTarget",
         "Properties":{
            "FileSystemId":{
               "Ref":"theFileSystem"
            },
            "SecurityGroups":[
               {
                  "Ref":"EfsSecurityGroup"
               }
            ],
            "SubnetId":{
               "Fn::ImportValue":"PublicSubC"
            }
         }
      },
      "EfsSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Allow NFS",
            "VpcId":{
               "Fn::ImportValue":"theVpcId"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"111",
                  "ToPort":"111",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"111",
                  "ToPort":"111",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"111",
                  "ToPort":"111",
                  "CidrIp":"10.0.2.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"111",
                  "ToPort":"111",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"111",
                  "ToPort":"111",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"111",
                  "ToPort":"111",
                  "CidrIp":"10.0.2.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"2049",
                  "ToPort":"2049",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"2049",
                  "ToPort":"2049",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"2049",
                  "ToPort":"2049",
                  "CidrIp":"10.0.2.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"2049",
                  "ToPort":"2049",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"2049",
                  "ToPort":"2049",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"2049",
                  "ToPort":"2049",
                  "CidrIp":"10.0.2.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"1110",
                  "ToPort":"1110",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"1110",
                  "ToPort":"1110",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"1110",
                  "ToPort":"1110",
                  "CidrIp":"10.0.2.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"1110",
                  "ToPort":"1110",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"1110",
                  "ToPort":"1110",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"1110",
                  "ToPort":"1110",
                  "CidrIp":"10.0.2.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"4045",
                  "ToPort":"4045",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"4045",
                  "ToPort":"4045",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"4045",
                  "ToPort":"4045",
                  "CidrIp":"10.0.2.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"4045",
                  "ToPort":"4045",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"4045",
                  "ToPort":"4045",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"udp",
                  "FromPort":"4045",
                  "ToPort":"4045",
                  "CidrIp":"10.0.2.0/24"
               }
            ],
            "SecurityGroupEgress":[
               {
                  "IpProtocol":"-1",
                  "FromPort":"1",
                  "ToPort":"65535",
                  "CidrIp":"0.0.0.0/0"
               }
            ]
         }
      }
   },
   "Outputs":{
      "theFileSystemOutput":{
         "Description":"DNS Name of the EFS filesystem.",
         "Value":{
            "Fn::Join":[
               "",
               [
                  {
                     "Ref":"theFileSystem"
                  },
                  ".efs.",
                  {
                     "Ref":"AWS::Region"
                  },
                  ".amazonaws.com"
               ]
            ]
         },
         "Export":{
            "Name":"theFileSystemName"
         }
      }
   }
}
