CloudFormation/RDS.json
{
   "Resources":{
      "MyDB":{
         "Type":"AWS::RDS::DBInstance",
         "Properties":{
            "DBInstanceIdentifier":"ovp",
            "MultiAZ":true,
            "PubliclyAccessible":false,
            "DBSubnetGroupName":{
               "Ref":"RdsSubnetGroup"
            },
            "VPCSecurityGroups":[
               {
                  "Ref":"MySQL3306"
               }
            ],
            "DBName":"ovp",
            "AllocatedStorage":"5",
            "StorageType":"gp2",
            "DBInstanceClass":"db.t2.micro",
            "Engine":"MySQL",
            "EngineVersion":"5.6",
            "MasterUsername":"root",
            "MasterUserPassword":"NotThisForLong",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"OVP"
               }
            ]
         },
         "DeletionPolicy":"Snapshot"
      },
      "RdsSubnetGroup":{
         "Type":"AWS::RDS::DBSubnetGroup",
         "Properties":{
            "DBSubnetGroupDescription":"Perpetuum public subnets",
            "SubnetIds":[
               {
                  "Fn::ImportValue":"PublicSubA"
               },
               {
                  "Fn::ImportValue":"PublicSubB"
               },
               {
                  "Fn::ImportValue":"PublicSubC"
               }
            ]
         }
      },
      "MySQL3306":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Allow mysql 3306 inbound",
            "VpcId":{
               "Fn::ImportValue":"theVpcId"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"3306",
                  "ToPort":"3306",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"3306",
                  "ToPort":"3306",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"3306",
                  "ToPort":"3306",
                  "CidrIp":"10.0.2.0/24"
               }
            ],
            "SecurityGroupEgress":[
               {
                  "IpProtocol":"-1",
                  "FromPort":"1",
                  "ToPort":"65535",
                  "CidrIp":"10.0.0.0/24"
               },
               {
                  "IpProtocol":"-1",
                  "FromPort":"1",
                  "ToPort":"65535",
                  "CidrIp":"10.0.1.0/24"
               },
               {
                  "IpProtocol":"-1",
                  "FromPort":"1",
                  "ToPort":"65535",
                  "CidrIp":"10.0.2.0/24"
               }
            ]
         }
      }
   }
}
