CloudFormation/VPC-and-Subnets.json
{
   "Resources":{
      "theVpc":{
         "Type":"AWS::EC2::VPC",
         "Properties":{
            "CidrBlock":"10.0.0.0/16",
            "EnableDnsSupport":"true",
            "EnableDnsHostnames":"true",
            "InstanceTenancy":"default",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"theVpc"
               }
            ]
         }
      },
      "InternetGateway":{
         "Type":"AWS::EC2::InternetGateway",
         "Properties":{
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"InternetGateway"
               }
            ]
         }
      },
      "AttachGateway":{
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "Properties":{
            "VpcId":{
               "Ref":"theVpc"
            },
            "InternetGatewayId":{
               "Ref":"InternetGateway"
            }
         }
      },
      "PublicRouteTable":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"theVpc"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"Public Route Table"
               }
            ]
         }
      },
      "PublicRoute":{
         "Type":"AWS::EC2::Route",
         "Properties":{
            "RouteTableId":{
               "Ref":"PublicRouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{
               "Ref":"InternetGateway"
            }
         }
      },
      "PublicSubA":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "VpcId":{
               "Ref":"theVpc"
            },
            "CidrBlock":"10.0.0.0/24",
            "AvailabilityZone":"us-east-2a",
            "MapPublicIpOnLaunch":true,
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"PublicSubA"
               }
            ]
         }
      },
      "PublicSubB":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "VpcId":{
               "Ref":"theVpc"
            },
            "CidrBlock":"10.0.1.0/24",
            "AvailabilityZone":"us-east-2b",
            "MapPublicIpOnLaunch":true,
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"PublicSubB"
               }
            ]
         }
      },
      "PublicSubC":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "VpcId":{
               "Ref":"theVpc"
            },
            "CidrBlock":"10.0.2.0/24",
            "AvailabilityZone":"us-east-2c",
            "MapPublicIpOnLaunch":true,
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"PublicSubC"
               }
            ]
         }
      },
      "PublicSubAAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"PublicSubA"
            },
            "RouteTableId":{
               "Ref":"PublicRouteTable"
            }
         }
      },
      "PublicSubBAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"PublicSubB"
            },
            "RouteTableId":{
               "Ref":"PublicRouteTable"
            }
         }
      },
      "PublicSubCAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"PublicSubC"
            },
            "RouteTableId":{
               "Ref":"PublicRouteTable"
            }
         }
      },
       "ssh":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Allow ssh inbound",
            "VpcId":{
               "Ref":"theVpc"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"22",
                  "ToPort":"22",
                  "CidrIp":"0.0.0.0/0"
               }
            ],
            "SecurityGroupEgress":[
               {
                  "IpProtocol":"-1",
                  "FromPort":"1",
                  "ToPort":"65535",
                  "CidrIp":"0.0.0.0/0"
               }
            ]
         }
      }
   },
   "Outputs":{
      "VpcId":{
         "Description":"VPC ID",
         "Value":{
            "Ref":"theVpc"
         },
         "Export":{
            "Name":"theVpcId"
         }
      },
      "PublicSubAOutput":{
         "Description":"Public Subnet A ID",
         "Value":{
            "Ref":"PublicSubA"
         },
         "Export":{
            "Name":"PublicSubA"
         }
      },
      "PublicSubBOutput":{
         "Description":"Public Subnet B ID",
         "Value":{
            "Ref":"PublicSubB"
         },
         "Export":{
            "Name":"PublicSubB"
         }
      },
      "PublicSubCOutput":{
         "Description":"Public Subnet C ID",
         "Value":{
            "Ref":"PublicSubC"
         },
         "Export":{
            "Name":"PublicSubC"
         }
      },
      "PublicRouteTableOutput":{
         "Description":"The public route table.",
         "Value":{
            "Ref":"PublicRouteTable"
         },
         "Export":{
            "Name":"PublicRouteTable"
         }
      },
      "InternetGatewayOutput":{
         "Description":"The Internet Gateway A",
         "Value":{
            "Ref":"InternetGateway"
         },
         "Export":{
            "Name":"InternetGateway"
         }
      }
   }
}
